<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackgroundColor"
        android:padding="@dimen/padding_normal"
        tools:context=".authentication.AuthenticationActivity">

        <LinearLayout
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.10">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gooddog"
                android:text="@string/welcome"
                android:textSize="@dimen/text_title_welcome" />

            <TextView
                android:id="@+id/sub_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gooddog"
                android:text="@string/sub_welcome"
                android:textSize="@dimen/text_title_sub_welcome" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/sniglet_regular"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text"
            app:layout_constraintStart_toStartOf="@+id/welcome_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <TextView
            android:id="@+id/logged_in_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/logged_in_user"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_normal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text"
            app:layout_constraintStart_toStartOf="@+id/welcome_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            tools:text="You are logged in as Helder Ventura" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_cocktail"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>