<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_wifi_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary_dark_color"
            android:gravity="center"
            android:text="@string/turn_on_internet"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_wifi_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/wifi_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_wifi_title" />

        <RelativeLayout
            android:id="@+id/dialog_wifi_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_wifi_text">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_wifi_no"
                style="@style/cancelButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:text="@string/no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_wifi_yes"
                style="@style/confirmButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:text="@string/yes" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>